--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="placeholder">Placeholder</string>
     <string name="hello_world">Hello, World!</string>
     <string name="InitialText">No goals for the day. Click the + to enter your most important thing</string>
+    <string-array name="Options">
+        <item>Options:</item>
+        <item>Today</item>
+        <item>Tomorrow</item>
+        <item>Pending</item>
+        <item>Recurring</item>
+    </string-array>
 </resources>
