--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_world">Hello, World!</string>
     <string name="InitialText">No goals for the day. Click the + to enter your most important thing</string>
     <string-array name="Options">
-        <item>Options:</item>
+<!--        <item>Options:</item>-->
         <item>Today</item>
         <item>Tomorrow</item>
         <item>Pending</item>
